--- a/step/.settings/org.eclipse.core.resources.prefs
+++ b/step/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/steppers/Brezenham.java=UTF-8
+encoding//src/steppers/Properties.java=UTF-8
 encoding//src/steppers/State.java=UTF-8
 encoding//src/steppers/step.java=UTF-8
