--- a/step/.classpath
+++ b/step/.classpath
@@ -17,7 +17,7 @@
 	<classpathentry kind="lib" path="/Users/Mikhail/Downloads/batik-1.7/lib/batik-svg-dom.jar"/>
 	<classpathentry kind="lib" path="/Users/Mikhail/Downloads/batik-1.7/lib/batik-svggen.jar"/>
 	<classpathentry kind="lib" path="/Users/Mikhail/Downloads/batik-1.7/lib/batik-swing.jar"/>
-	<classpathentry kind="lib" path="/Users/Mikhail/Downloads/batik-1.7/lib/batik-transcoder.jar"/>
+	<classpathentry kind="lib" path="/Users/Mikhail/Downloads/batik-1.7/lib/batik-transcoder.jar" sourcepath="/Users/Mikhail/Downloads/batik-1-1.7/sources/org/apache/batik/"/>
 	<classpathentry kind="lib" path="/Users/Mikhail/Downloads/batik-1.7/lib/batik-util.jar"/>
 	<classpathentry kind="lib" path="/Users/Mikhail/Downloads/batik-1.7/lib/batik-xml.jar"/>
 	<classpathentry kind="lib" path="/Users/Mikhail/Downloads/batik-1.7/lib/js.jar"/>
